--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -21,11 +21,11 @@
   }
   
   .theme.col-1 {
-    background-color: #927bc1;
+    background-color: map-get($btn-colors, 'inf');
   }
   
   .theme.col-2 {
-    background-color: #fd7856;
+    background-color: map-get($btn-colors, 'wrn');
   }
   
   .theme.col-3 {
@@ -53,15 +53,15 @@
   }
   
   .theme.col-9 {
-    background-color: #e4757a;
+    background-color: map-get($btn-colors, 'err');
   }
   
   .theme.col-10 {
-    background-color: #63cc82;
+    background-color: map-get($btn-colors, 'scs');
   }
   
   .theme.col-11 {
-    background-color: #51ddfc;
+    background-color: $secondary-color;
   }
   
   .theme.col-12 {
